Adding missing env variables for Ekstazi to run (but it might not work)